Areglando las ultimas pages

--- a/pages/managment.html
+++ b/pages/managment.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Herramientas de planificación, estrategia y organización para el negocio del arborismo">
+    <meta name="description"
+        content="Herramientas de planificación, estrategia y organización para el negocio del arborismo">
     <meta name="keywords" content="Arborismo, arboricultura, negocio arborismo, arboristas.">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -59,11 +60,14 @@
     </header>
     <main>
         <div class="container titulo-page">
-            <h3>Gestionar bien, crecer con sentido.</h3>
-            <p>El saber técnico no basta para sostener un negocio arborista. Esta sección entrega herramientas de
-                planificación, estrategia y organización para que tu empresa sea viable, ética y resiliente.</p>
+            <section>
+                <h2>Gestionar bien, crecer con sentido</h2>
+                <p>El saber técnico no basta para sostener un negocio arborista. Esta sección entrega herramientas de
+                    planificación, estrategia y organización para que tu empresa sea viable, ética y resiliente.</p>
+            </section>
         </div>
-        <div class="card card-estilo-jesu mb-5 mt-5 mx-auto">
+
+        <div class="card card-mediana mx-auto">
             <div class="row g-0">
                 <div class="col-md-6">
                     <img src="../assets/arborista-managment.png" class="img-fluid rounded-start"
@@ -71,65 +75,72 @@
                 </div>
                 <div class="col-md-6 d-flex texto-card-jesu">
                     <div class="card-body">
-                        <h5 class="card-title">El árbol no crece sin raíz: tu empresa tampoco.</h5>
+                        <h3 class="card-title">El árbol no crece sin raíz: tu empresa tampoco.</h3>
                         <p class="card-text">Muchos arboristas dominan el terreno, pero se pierden al momento de cobrar,
-                            planificar o escalar su negocio. Una buena gestión no solo mejora los resultados económicos,
+                            planificar o escalar su negocio. </p>
+                        <p>Una buena gestión no solo mejora los resultados económicos,
                             también protege la calidad del servicio, el bienestar del árbol y la confianza de tus
                             clientes.</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container my-5">
-            <div class="text-center mb-4">
+
+        <div class="info-card-container my-5">
+            <div class="text-center info-card mb-4">
                 <h3>Gestionar con inteligencia también es arborismo</h3>
-                <p>Saber trabajar en el árbol es solo la mitad del camino. La otra mitad se construye en el escritorio,
-                    planificando, organizando y tomando decisiones claras.
-                    Explora estos tres enfoques claves para transformar tu oficio en un proyecto sólido, rentable y con
-                    impacto real.
-                </p>
+                <p>Saber trabajar en el árbol es solo la mitad del camino. La otra mitad se construye en el escritorio
+                    planificando, organizando y tomando decisiones claras.</p>
+                <p>Explora estos tres enfoques claves para transformar tu oficio en un proyecto sólido, rentable y con
+                    impacto real.</p>
             </div>
         </div>
-        <div class="container py-5">
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="../assets/oficina-managment.png" class="card-img-top"
-                            alt="zoom-in a manos de arborista revisando papeles administrativos">
-                        <div class="card-body">
-                            <h5 class="card-title">Finanzas claras</h5>
-                            <p class="card-text">Aprende a cotizar bien, separar ingresos y gastos, y asegurar la
-                                sostenibilidad de tu negocio.</p>
+        <!--Card pequeña para blogs-->
+        <div class="card-para-blogs">
+            <div class="container py-5">
+                <header class="mb-4 text-center">
+                    <h2 class="seccion-titulo">Explora las conexiones del mundo arbóreo</h2>
+                    <p class="seccion-subtitulo">Descubre las áreas clave que revelan cómo los árboles comunican, resisten, inspiran y enseñan a través de su sabiduría ancestral y natural.</p>
+                </header>
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                        <div class="card card-jesu h-100">
+                            <img src="../assets/oficina-managment.png" class="card-img-top"
+                                alt="zoom-in a manos de arborista revisando papeles administrativos">
+                            <div class="card-body card-body-jesu">
+                                <h3 class="card-title">Finanzas claras</h3>
+                                <p class="card-text">Aprende a cotizar bien, separar ingresos y gastos, y asegurar la
+                                    sostenibilidad de tu negocio.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="../assets/mapa-mental-managment.png" class="card-img-top" alt="">
-                        <div class="card-body">
-                            <h5 class="card-title">Estrategia con propósito</h5>
-                            <p class="card-text">Cómo diseñar tu oferta de valor, elegir clientes adecuados y
-                                diferenciarte sin perder tu ética profesional.</p>
+                    <div class="col">
+                        <div class="card card-jesu h-100">
+                            <img src="../assets/mapa-mental-managment.png" class="card-img-top" alt="">
+                            <div class="card-body card-body-jesu">
+                                <h3 class="card-title">Estrategia con propósito</h3>
+                                <p class="card-text">Cómo diseñar tu oferta de valor, elegir clientes adecuados y
+                                    diferenciarte sin perder tu ética profesional.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="../assets/tasks-managment.png" class="card-img-top" alt="">
-                        <div class="card-body">
-                            <h5 class="card-title">Organización y procesos</h5>
-                            <p class="card-text">Herramientas simples para ordenar tu calendario, equipo, documentación
-                                y servicios. Menos caos, más eficiencia.</p>
+                    <div class="col">
+                        <div class="card card-jesu h-100">
+                            <img src="../assets/tasks-managment.png" class="card-img-top" alt="">
+                            <div class="card-body card-body-jesu">
+                                <h3 class="card-title">Organización y procesos</h3>
+                                <p class="card-text">Herramientas simples para ordenar tu calendario, equipo, documentación y servicios. Menos caos, más eficiencia.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <!--Carrusel de Comentarios-->
-        <div id="carouselCards" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselCards" class="carousel carrusel-jesu slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <div class="container" style="max-width: 950px;">
+                    <div class="container">
                         <div class="card">
                             <div class="card-header">
                                 Falta de visión a largo plazo
@@ -232,21 +243,24 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../assets/managment-1slide-carrusel.png" class="d-block w-100" alt="Tres arboristas en un parque con arboles revisando carpetas.">
+                    <img src="../assets/managment-1slide-carrusel.png" class="d-block w-100"
+                        alt="Tres arboristas en un parque con arboles revisando carpetas.">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Tu proyecto merece crecer con estructura</h5>
                         <p>Gestionar bien no es burocracia: es darle estabilidad, valor y futuro a tu oficio.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../assets/managment-2slide-carrusel.png" class="d-block w-100" alt="Manos en oficina haciendo trabajo administrativo">
+                    <img src="../assets/managment-2slide-carrusel.png" class="d-block w-100"
+                        alt="Manos en oficina haciendo trabajo administrativo">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Organizarte no te quita libertad, te la devuelve</h5>
                         <p>Tu bienestar también depende de cómo gestionas tu tiempo y tus ingresos.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../assets/managment-3slide-carrusel.png" class="d-block w-100" alt="arborista terminando jornada laboral con cara de satisfecho">
+                    <img src="../assets/managment-3slide-carrusel.png" class="d-block w-100"
+                        alt="arborista terminando jornada laboral con cara de satisfecho">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>El negocio también es parte del oficio</h5>
                         <p>Cuando aprendes a gestionarlo, todo fluye mejor: tu trabajo, tu energía y tu impacto.</p>
