--- a/pages/treeWisdom.html
+++ b/pages/treeWisdom.html
@@ -84,7 +84,7 @@
             </div>
         </div>
 
-        <div class="container titulo-parrafo info-card-container">
+        <div class="titulo-parrafo info-card-container">
             <div class="info-card">
                 <h3>Conocimiento que conecta pasado y presente</h3>
                 <p>Durante siglos, los árboles han sido una fuente constante de observación, estudio y enseñanza. En
