--- a/pages/worklife.html
+++ b/pages/worklife.html
@@ -59,82 +59,87 @@
     </header>
     <main>
         <div class="container titulo-page">
-            <h3>Worklife</h3>
-            <h6>La vida cotidiana del arborista, desde el terreno hasta el equipo.</h6>
-            <p>Técnicas, herramientas, experiencias reales y todo lo que hace posible un trabajo profesional, seguro y
-                consciente junto a los árboles.</p>
+            <Section>
+                <h2>La vida cotidiana del arborista</h2>
+                <p>Un recorrido por el día a día de quienes trabajan entre los árboles: desde técnicas y herramientas que aseguran seguridad y eficiencia, hasta experiencias reales que forman oficio. Aquí exploramos todo lo que hace posible un arborismo profesional, responsable y en armonía con el entorno.</p>
+            </Section>
         </div>
+<!--Cards pequeñas solo título-->
         <div class="container py-5">
+               <header class="mb-4 text-center">
+                    <h2 class="seccion-titulo">Explora las conexiones del mundo arbóreo</h2>
+                    <p class="seccion-subtitulo">Descubre las áreas clave que revelan cómo los árboles comunican, resisten, inspiran y enseñan a través de su sabiduría ancestral y natural.</p>
+                </header>
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card card-chica h-100">
                         <img src="../assets/Card-1.png" class="card-img-top" alt="arborista-escalando">
                         <div class="card-body">
-                            <h5 class="card-title">Escalada Segura en Árboles Urbanos</h5>
+                            <h3 class="card-title">Escalada segura en árboles urbanos</h3>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card card-chica h-100">
                         <img src="../assets/Card-2.png" class="card-img-top" alt="arborista-podando">
                         <div class="card-body">
-                            <h5 class="card-title">Técnicas de Poda Profesional</h5>
+                            <h3 class="card-title">Técnicas de poda profesional</h3>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card card-chica h-100">
                         <img src="../assets/card-3.png" class="card-img-top" alt="equipo-arborismo">
                         <div class="card-body">
-                            <h5 class="card-title">Equipamiento Esencial para el Día a Día</h5>
+                            <h3 class="card-title">Equipamiento esencial para el día a día</h3>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card card-chica h-100">
                         <img src="../assets/Card-4.png" class="card-img-top" alt="arboristas-analizando-árbol">
                         <div class="card-body">
-                            <h5 class="card-title">Evaluación de Riesgos en Terreno</h5>
+                            <h3 class="card-title">Evaluación de riesgos en terreno</h3>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card card-chica h-100">
                         <img src="../assets/Card-5.png" class="card-img-top" alt="arborista-revisando-doc.">
                         <div class="card-body">
-                            <h5 class="card-title">Normativas y Estándares ISA en Acción</h5>
+                            <h3 class="card-title">Normativas y estándares ISA en acción</h3>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card card-chica h-100">
                         <img src="../assets/Card-6.png" class="card-img-top" alt="arborista-comunicación">
                         <div class="card-body">
-                            <h5 class="card-title">Trabajo en Equipo y Comunicación en Altura</h5>
+                            <h3 class="card-title">Trabajo en equipo y comunicación en altura</h3>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card card-chica h-100">
                         <img src="../assets/Card-7.png" class="card-img-top" alt="arborista-enseñanza">
                         <div class="card-body">
-                            <h5 class="card-title">Aprendizajes de Campo: Errores que Enseñan</h5>
+                            <h3 class="card-title">Aprendizajes de campo: Errores que enseñan</h3>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card card-chica h-100">
                         <img src="../assets/Card-8.png" class="card-img-top" alt="arborista-tiempo">
                         <div class="card-body">
-                            <h5 class="card-title">Gestión del Tiempo y Rutinas de Trabajo</h5>
+                            <h3 class="card-title">Gestión del tiempo y rutinas de trabajo</h3>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card card-chica h-100">
                         <img src="../assets/Card-9.png" class="card-img-top" alt="arborista-mantención">
                         <div class="card-body">
-                            <h5 class="card-title">Mantenimiento y Cuidado de Herramientas</h5>
+                            <h3 class="card-title">Mantenimiento y cuidado de herramientas</h3>
                         </div>
                     </div>
                 </div>
