Entrega Proyecto Final

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
     </div>
     <!--Bloque texto + botón-->
-    <section class="info-card-container">
+    <section class="info-card-container-sf">
       <div class="info-card">
         <h3 class="card-text text-center">Explora, aprende y conéctate con una comunidad global.</h3>
         <p class="text-center">Recibe contenido seleccionado, herramientas útiles y lo mejor del mundo arborista
