--- a/pages/managment.html
+++ b/pages/managment.html
@@ -143,7 +143,7 @@
                     <div class="container">
                         <div class="card">
                             <div class="card-header">
-                                Falta de visión a largo plazo
+                                🔭📉 Falta de visión a largo plazo
                             </div>
                             <div class="card-body">
                                 <figure>
@@ -164,7 +164,7 @@
                     <div class="container" style="max-width: 950px;">
                         <div class="card">
                             <div class="card-header">
-                                Dificultad para cobrar
+                                💰🤷🏽‍♂️ Dificultad para cobrar
                             </div>
                             <div class="card-body">
                                 <figure>
@@ -184,7 +184,7 @@
                     <div class="container" style="max-width: 950px;">
                         <div class="card">
                             <div class="card-header">
-                                Falta de formación en gestión
+                                📋❌ Falta de formación en gestión
                             </div>
                             <div class="card-body">
                                 <figure>
@@ -204,7 +204,7 @@
                     <div class="container" style="max-width: 950px;">
                         <div class="card">
                             <div class="card-header">
-                                Desorden interno que afecta todo
+                                🗂️💥 Desorden interno que afecta todo
                             </div>
                             <div class="card-body">
                                 <figure>
@@ -223,16 +223,16 @@
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselCards" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon bg-dark rounded-circle" aria-hidden="true"></span>
+                <span class="carousel-control-prev-icon  icono  bg-dark rounded-circle" aria-hidden="true"></span>
                 <span class="visually-hidden">Anterior</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselCards" data-bs-slide="next">
-                <span class="carousel-control-next-icon bg-dark rounded-circle" aria-hidden="true"></span>
+                <span class="carousel-control-next-icon icono bg-dark rounded-circle" aria-hidden="true"></span>
                 <span class="visually-hidden">Siguiente</span>
             </button>
         </div>
         <!--Carrusel final-->
-        <div id="carouselExampleCaptions" class="carousel slide">
+        <div id="carouselExampleCaptions" class="carousel carrusel-estilo slide">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
@@ -245,24 +245,24 @@
                 <div class="carousel-item active">
                     <img src="../assets/managment-1slide-carrusel.png" class="d-block w-100"
                         alt="Tres arboristas en un parque con arboles revisando carpetas.">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Tu proyecto merece crecer con estructura</h5>
+                    <div class="carousel-caption j-esilo d-none d-md-block">
+                        <h4>Tu proyecto merece crecer con estructura</h4>
                         <p>Gestionar bien no es burocracia: es darle estabilidad, valor y futuro a tu oficio.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="../assets/managment-2slide-carrusel.png" class="d-block w-100"
                         alt="Manos en oficina haciendo trabajo administrativo">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Organizarte no te quita libertad, te la devuelve</h5>
+                    <div class="carousel-caption d-none j-esilo d-md-block">
+                        <h4>Organizarte no te quita libertad, te la devuelve</h4>
                         <p>Tu bienestar también depende de cómo gestionas tu tiempo y tus ingresos.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="../assets/managment-3slide-carrusel.png" class="d-block w-100"
                         alt="arborista terminando jornada laboral con cara de satisfecho">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>El negocio también es parte del oficio</h5>
+                    <div class="carousel-caption d-none j-esilo d-md-block">
+                        <h4>El negocio también es parte del oficio</h4>
                         <p>Cuando aprendes a gestionarlo, todo fluye mejor: tu trabajo, tu energía y tu impacto.</p>
                     </div>
                 </div>
