--- a/pages/environment.html
+++ b/pages/environment.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="El rol activo del arborismo en la construcción de ciudades más resilientes, saludables y sostenibles.">
+    <meta name="description"
+        content="El rol activo del arborismo en la construcción de ciudades más resilientes, saludables y sostenibles.">
     <meta name="keywords" content="Arborismo, medio ambiente, arboricultura, tree climber.">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -59,21 +60,24 @@
         </nav>
     </header>
     <main>
-        <div class="card text-bg-dark">
+        <div class="card text-bg-dark banner-estilo-jesu">
             <img src="../assets/banner-environment.png" class="card-img" alt="...">
-            <div class="card-img-overlay">
-                <h5 class="card-title">Environment</h5>
-                <p class="card-text">El rol del arborismo frente a la crisis climática y el entorno.</p>
-                <p class="card-text"><small>Last updated 3 mins ago</small></p>
+            <div class="card-img-overlay texto-card-banner">
+                <h2 class="card-title">El rol del Arborismo frente a la crisis climática y el entorno</h2>
             </div>
         </div>
-        <div class="container titulo-page">
-            <h3>Arborismo como respuesta climática y urbana.</h3>
-            <h6>El cambio climático, la crisis hídrica y la pérdida de biodiversidad ya no son futuro: son presente. En
-                esta sección abordamos el rol activo del arborismo en la construcción de ciudades más resilientes,
-                saludables y sostenibles.</h6>
+        <!--Bloque texto-->
+        <div class="info-card-container-sf">
+            <div class="info-card">
+                <h3>Arborismo como respuesta climática y urbana</h3>
+                <p>El cambio climático, la crisis hídrica y la pérdida de biodiversidad ya no son futuro: son presente.
+                </p>
+                <p>En esta sección abordamos el rol activo del arborismo en la construcción de ciudades más
+                    resilientes, saludables y sostenibles.</p>
+            </div>
         </div>
-        <div class="card card-estilo-jesu mb-5 mt-5 mx-auto">
+        <!--Card informativa-->
+        <div class="card card-mediana mx-auto">
             <div class="row g-0">
                 <div class="col-md-6">
                     <img src="../assets/arboles-urbanos-card.png" class="img-fluid rounded-start"
@@ -81,20 +85,18 @@
                 </div>
                 <div class="col-md-6 d-flex texto-card-jesu">
                     <div class="card-body">
-                        <h5 class="card-title">Cuidar árboles es cuidar comunidad.</h5>
-                        <p class="card-text">Los árboles urbanos son infraestructura viva.
-                            Mitigan el calor, filtran el aire, conservan el agua y unen barrios.
-                            Su presencia mejora la calidad de vida, conecta a las personas con su entorno y hace que las
-                            ciudades sean más habitables, resilientes y justas.
-                        </p>
+                        <h3 class="card-title">Cuidar árboles es cuidar comunidad.</h3>
+                        <p class="card-text">Los árboles urbanos son infraestructura viva. Mitigan el calor, filtran el aire, conservan el agua y unen barrios.</p>
+                        <p>Su presencia mejora la calidad de vida, conecta a las personas con su entorno y hace que las ciudades sean más habitables, resilientes y justas.</p>
+
                     </div>
                 </div>
             </div>
         </div>
-        <div class="card">
+        <div class="card card-texturas">
             <div class="card-body">
-                <h5 class="card-title">Adaptación Climática</h5>
-                <p class="card-text">Los árboles enfrían, protegen y estabilizan.</p>
+                <h4 class="card-title">Adaptación Climática</h4>
+                <p class="card-text">Los árboles enfrían, protegen y estabilizan</p>
                 <p class="card-text"><small class="text-body-secondary">En un escenario de olas de calor e inundaciones
                         crecientes, el arbolado urbano cumple un rol clave. Regulan la temperatura, reducen el efecto
                         isla de calor y absorben agua de lluvia, ayudando a mitigar los impactos del cambio climático en
@@ -103,10 +105,10 @@
             <img src="../assets/tronco-environment.png" class="card-img-bottom"
                 alt="tronco de arbol acostado, se detalla corteza">
         </div>
-        <div class="card">
+        <div class="card card-texturas">
             <div class="card-body">
-                <h5 class="card-title">Infraestructura Verde</h5>
-                <p class="card-text">Más que paisaje: son parte del sistema.</p>
+                <h4 class="card-title">Infraestructura Verde</h4>
+                <p class="card-text">Más que paisaje: son parte del sistema</p>
                 <p class="card-text"><small class="text-body-secondary">Los árboles no son decoración. Son
                         infraestructura funcional que filtra contaminantes, retiene partículas, mejora la salud pública
                         y reduce costos energéticos. Incorporarlos estratégicamente es parte de un urbanismo eficiente y
@@ -114,10 +116,10 @@
             </div>
             <img src="../assets/hojas-environment.png" class="card-img-bottom" alt="patrón de hojas de arbol">
         </div>
-        <div class="card">
+        <div class="card card-texturas">
             <div class="card-body">
-                <h5 class="card-title">Adaptación Climática</h5>
-                <p class="card-text">Los árboles enfrían, protegen y estabilizan..</p>
+                <h4 class="card-title">Adaptación Climática</h4>
+                <p class="card-text">Los árboles enfrían, protegen y estabilizan</p>
                 <p class="card-text"><small class="text-body-secondary">En un escenario de olas de calor e inundaciones
                         crecientes, el arbolado urbano cumple un rol clave. Regulan la temperatura, reducen el efecto
                         isla de calor y absorben agua de lluvia, ayudando a mitigar los impactos del cambio climático en
@@ -125,14 +127,13 @@
             </div>
             <img src="../assets/agua-environment.png" class="card-img-bottom" alt="zoom-in del agua en movimiento">
         </div>
-        <div class="card text-center mb-3" style="width: 18rem;">
+        <div class="card card-btn">
             <div class="card-body">
-                <h5 class="card-title">El impacto comienza con cada árbol</h5>
-                <p class="card-text">Cada poda consciente, cada árbol bien ubicado y cada comunidad que protege su
-                    entorno suma.
+                <h3 class="card-title">El impacto comienza con cada árbol</h3>
+                <p class="card-text">Cada poda consciente, cada árbol bien ubicado y cada comunidad que protege su entorno suma.
                     El arborismo no es solo técnica, es también una forma activa de responder a la crisis ambiental
                     desde lo local.</p>
-                <a href="#" class="btn btn-primary">Explora buenas prácticas</a>
+                <a href="#" class="btn btn-primary boton-primario">Explora buenas prácticas</a>
             </div>
         </div>
     </main>
